# PhoenixPrep

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .flake8  .pre-commit-config.yaml  CPU_FP16_INTEGRATION_SUMMARY.md  auto_process.py  batch_convert_pdf.py  check_files.py  cli.py  cli_simple.py  inference_macos.py  main.py  png_parsing_summary.md  pyproject.toml  pytest.ini  requirements.txt  simple_batch.py  test_optimized_png.py  test_parse_png.py  test_simple_png.py  verify_png_parsing.py
backend/src/api/endpoints/: mistake.py  question_answer_matching.py
backend/src/services/: document_parser.py  docx_parsing.py  fast_logics_parsing.py  logics_parsing_service.py  mistake_analysis.py  optimized_logics_parsing.py  question_answer_matcher.py
backend/src/utils/: content_chunker.py
backend/tests/: conftest.py
backend/tests/contract/: test_questions_get.py  test_questions_post.py  test_upload_post.py  test_upload_result.py  test_upload_status.py
data/input-doc/: ~$01-math-set-question.docx
data/parsed-html/: 2020-化学-北京-高考_parsed.html  2020-数学-北京-高考_parsed.html  2020-物理-北京-高考_parsed.html  2020-生物-北京-高考_parsed.html  2020-英语-北京-高考_parsed.html  2020-语文-北京-高考_parsed.html  2021-化学-北京-高考_parsed.html  2021-数学-北京-高考_parsed.html  2021-物理-北京-高考_parsed.html  2021-生物-北京-高考_parsed.html  2021-英语-北京-高考_parsed.html  2021-语文-北京-高考_parsed.html  2022-化学-北京-高考_parsed.html  2022-数学-北京-高考_parsed.html  2022-物理-北京-高考_parsed.html  2022-生物-北京-高考_parsed.html  (+63 more)
frontend/: index.html  jest.config.js  package.json
(+21 files in other folders)
